<resources>
    <string name="app_name">Instafood</string>

    <!-- Icons -->
    <string name="navigate_icon">{ion-navigate}</string>
    <string name="call_icon">{ion-android-call}</string>
    <string name="share_icon">{ion-android-share-alt}</string>
    <string name="user_icon">{ion-android-person}</string>
    <string name="close_icon">{ion-android-close}</string>
    <string name="check_icon">{ion-checkmark-round}</string>
    <string name="x_icon">{ion-close-round}</string>

    <string name="miles_away">%.1f mi</string>
    <string name="kilometers_away">%.1f km</string>
    <string name="one_review">1 review</string>
    <string name="num_reviews">%d reviews</string>

    <string name="navigate_with">Navigate with</string>
    <string name="call_with">Call with</string>

    <string name="photos"><u>Photos</u></string>
    <string name="no_photos">There are no photos attached to this restaurant.</string>
    <string name="what_others_saying"><u>What People Are Saying</u></string>
    <string name="no_reviews">There are no reviews attached to this restaurant.</string>

    <string name="additional_information"><u>Additional Information</u></string>
    <string name="does_pickup_takeout">Does Pickup/Take-out</string>
    <string name="delivers">Delivers</string>
    <string name="takes_reservations">Takes Reservations</string>

    <string name="navigate">Navigate</string>
    <string name="call">Call</string>
    <string name="share">Share</string>
    <string name="choose">Choose</string>
    <string name="cancel">Cancel</string>

    <string name="image_load_fail">Failed to load image.</string>

    <string name="find_new_restaurant">Find new restaurant</string>
    <string name="no_open_restaurants">There are no open restaurants near you.</string>

    <string name="restaurant_call_bad_result">
        We were unable to find a restaurant for you. Please try again later.
    </string>

    <string name="share_restaurant_with">Share restaurant info with</string>
    <string name="share_template">
        Hey, check out this awesome restaurant I found on Instafood!\n\nName: %1$s\nRating: %2$s\nAddress: %3$s\nFood type: %4$s\nPhone number: %5$s\n\n%6$s
    </string>

    <string name="open_until">Open until %s</string>
    <string name="closing_at">Closes at %s</string>
    <string name="closing_time_unavailable">Closing time unavailable</string>
    <string name="open_24_hours">Open 24 hours</string>

    <string name="please_rate">
        Hey, it looks like you\'re a frequent user of Instafood!
        If you have a couple seconds, please rate this app in the Play Store.
        Every rating goes a long way towards motivating us to continue improving this app!
    </string>
    <string name="will_rate">Sure, I\'ll help</string>
    <string name="no_im_good">No, I\'m good</string>
</resources>
