<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homepage_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SpUsage, RtlHardcoded">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:descendantFocusability="blocksDescendants">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <com.google.android.gms.maps.MapView
                android:id="@+id/restaurant_map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <android.support.v7.widget.CardView
                android:id="@+id/hours_card"
                style="@style/hours_card">

                <TextView
                    android:id="@+id/hours_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="15dp"
                    android:maxLines="1"
                    android:visibility="gone"/>

                <com.randomappsinc.instafood.views.SkeletonView
                    android:id="@+id/skeleton_hours_text"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"/>
            </android.support.v7.widget.CardView>
        </FrameLayout>

        <include layout="@layout/restaurant_cell"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <android.support.v7.widget.CardView
                android:id="@+id/navigate_button"
                android:layout_marginRight="4dp"
                style="@style/action_card">

                <LinearLayout style="@style/action_container">
                    <com.joanzapata.iconify.widget.IconTextView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="@string/navigate_icon"
                        android:textSize="32dp"
                        android:textColor="@color/blue"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/navigate"
                        android:textSize="17dp"
                        android:textColor="@color/dark_gray"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/share_button"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                style="@style/action_card">

                <LinearLayout style="@style/action_container">
                    <com.joanzapata.iconify.widget.IconTextView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="@string/share_icon"
                        android:textSize="32dp"
                        android:textColor="@color/red"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/share"
                        android:textSize="17dp"
                        android:textColor="@color/dark_gray"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/call_button"
                android:layout_marginLeft="4dp"
                style="@style/action_card">

                <LinearLayout style="@style/action_container">
                    <com.joanzapata.iconify.widget.IconTextView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="@string/call_icon"
                        android:textSize="32dp"
                        android:textColor="@color/green"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/call"
                        android:textSize="17dp"
                        android:textColor="@color/dark_gray"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="4dp"
            android:text="@string/photos"
            android:textColor="@color/dark_gray"
            android:textSize="21dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/restaurant_photos"
                android:layout_height="match_parent"
                android:visibility="invisible"
                style="@style/horizontal_gallery"/>

            <LinearLayout
                android:id="@+id/photos_stub"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:orientation="horizontal">

                <include layout="@layout/skeleton_photo_cell"/>

                <include layout="@layout/skeleton_photo_cell"/>

                <include layout="@layout/skeleton_photo_cell"/>
            </LinearLayout>
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/what_others_saying"
            android:textColor="@color/dark_gray"
            android:textSize="21dp"/>

        <LinearLayout
            android:id="@+id/reviews_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:orientation="vertical"/>

        <LinearLayout
            android:id="@+id/reviews_stub"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:orientation="vertical">

            <include layout="@layout/skeleton_review_cell"/>

            <include layout="@layout/skeleton_review_cell"/>

            <include layout="@layout/skeleton_review_cell"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
